[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Lamp.gd" type="Script" id=1]
[ext_resource path="res://assets/img/items/lantern.png" type="Texture" id=2]
[ext_resource path="res://scenes/useLbl.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 135.512, 108.677 )

[node name="Lamp" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.112683, 0.112683 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="useLbl" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="." to="." method="_on_Lamp_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lamp_body_exited"]
